# limix-lmm

./: .gitignore  .travis.yml  README.md  readthedocs.yml  requirements.txt  setup.cfg  setup.py  speed.py
doc/: .gitignore  Makefile  conf.py  environment.yml  example.py  gwas.rst  index.rst  install.rst  make.bat  public.rst  python.rst  quickstart.rst
doc/data_structlmm/: env.txt  expr.csv
doc/examples/: lmm_example.py  mtlmm_example.py
limix_lmm/: __init__.py  _blk_diag.py  _testit.py  gwas.py  lmm.py  lmm_core.py  mtlmm.py  mtlmm_helper.py  util.py
limix_lmm/lmm/: lmm.py  lmm_core.py
limix_lmm/lmm_core/: __init__.py  lmm.py  lmm_core.py  mtlmm.py  mtlmm_helper.py  util.py
limix_lmm/plot/: __init__.py  _qqplot.py  manhattan.py  qqplot.py
limix_lmm/runner/: __init__.py  run_lmm.py  run_lmm_int.py
limix_lmm/sh/: __init__.py  download.py  unzip.py
limix_lmm/test/: test_gwas.py  test_mt_scan.py  test_mtmm_scan.py
