[metadata]
author = Francesco Paolo Casale
author_email = casale@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
description = Linear mixed model for GWAS
download_url = https://github.com/limix/limix-lmm
keywords = GWAS, LMM
license = APACHE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Francesco Paolo Casale
platforms = Windows, MacOS, Linux
maintainer_email = casale@ebi.ac.uk
name = limix-lmm
url = https://github.com/limix/limix-lmm
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    numpy>=1.13.0
    scipy>=1.1.0
    pytest>=3.6.3
    limix-core>=1.0.2
    pandas-plink>=1.2.28
    geno-sugar
    matplotlib>=2.2.3

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
pep8ignore = E402

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
